# nimage

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
assets/: nimage.desktop
src/: lib.rs  main.rs
src/nsif/: error.rs  export.rs  field.rs  fileheader.rs  imagesegment.rs  mod.rs
tests/: parse_nsif_test.rs
